--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "my-shoppingify-2",
   "private": true,
   "version": "0.0.0",
-  "workspaces": ["packages/*"]
+  "workspaces": ["packages/*"],
+  "trustedDependencies": [
+    "@swc/core",
+    "esbuild",
+    "sharp",
+    "workerd"
+  ]
 }
