--- a/packages/backend/wrangler.toml
+++ b/packages/backend/wrangler.toml
@@ -24,5 +24,5 @@ compatibility_date = "2024-11-16"
 # binding = "AI"
 
 # [observability]
-# enabled = true
+# enabled = false
 # head_sampling_rate = 1
