--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.13",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.461.0",
+    "matter-js": "^0.20.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -48,6 +49,7 @@
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@tanstack/router-devtools": "^1.111.11",
     "@tanstack/router-plugin": "^1.111.12",
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
