--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,10 +5,10 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.7.2"
+    "hono": "^4.7.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250224.0",
-    "wrangler": "^3.110.0"
+    "@cloudflare/workers-types": "^4.20250313.0",
+    "wrangler": "4"
   }
 }
