--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,10 +22,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.1",
-    "@tanstack/react-query": "^5.66.9",
-    "@tanstack/react-query-devtools": "^5.66.9",
-    "@tanstack/react-query-persist-client": "^5.66.9",
-    "@tanstack/react-router": "^1.111.11",
+    "@tanstack/react-query": "^5.67.3",
+    "@tanstack/react-query-devtools": "^5.67.3",
+    "@tanstack/react-query-persist-client": "^5.67.3",
+    "@tanstack/react-router": "^1.114.17",
     "backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,10 +33,11 @@
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.461.0",
     "matter-js": "^0.20.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "redaxios": "^0.5.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
@@ -45,24 +46,24 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tanstack/eslint-plugin-query": "^5.66.1",
-    "@tanstack/router-devtools": "^1.111.11",
-    "@tanstack/router-plugin": "^1.111.12",
+    "@eslint/js": "^9.22.0",
+    "@tanstack/eslint-plugin-query": "^5.67.2",
+    "@tanstack/router-devtools": "^1.114.21",
+    "@tanstack/router-plugin": "^1.114.17",
     "@types/matter-js": "^0.19.8",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.25.0",
+    "typescript-eslint": "^8.26.1",
     "vite": "^5.4.14"
   }
 }
