--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,10 +22,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.1",
-    "@tanstack/react-query": "^5.66.9",
-    "@tanstack/react-query-devtools": "^5.66.9",
-    "@tanstack/react-query-persist-client": "^5.66.9",
-    "@tanstack/react-router": "^1.111.11",
+    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query-devtools": "^5.69.0",
+    "@tanstack/react-query-persist-client": "^5.69.0",
+    "@tanstack/react-router": "^1.114.25",
     "backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,11 +44,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tanstack/eslint-plugin-query": "^5.66.1",
-    "@tanstack/router-devtools": "^1.111.11",
-    "@tanstack/router-plugin": "^1.111.12",
-    "@types/node": "^22.13.5",
+    "@eslint/js": "^9.22.0",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@tanstack/router-devtools": "^1.114.25",
+    "@tanstack/router-plugin": "^1.114.25",
+    "@types/matter-js": "^0.19.8",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.8.0",
