--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,10 +5,11 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.7.4"
+    "@google/genai": "^0.7.0",
+    "hono": "^4.7.5"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250317.0",
-    "wrangler": "^4.1.0"
+    "@cloudflare/workers-types": "^4.20250405.0",
+    "wrangler": "^4.7.2"
   }
 }
