--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,10 +6,11 @@
   },
   "dependencies": {
     "@google/genai": "^0.7.0",
-    "hono": "^4.7.7"
+    "cheerio": "^1.0.0",
+    "hono": "^4.7.8"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250424.0",
-    "wrangler": "^4.13.0"
+    "@cloudflare/workers-types": "^4.20250503.0",
+    "wrangler": "^4.14.1"
   }
 }
