fix: update gh action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,11 @@ jobs:
             SUPABASE_URL
             SUPABASE_ANON_KEY
             SUPABASE_SERVICE_KEY
+            GEMINI_API_KEY
           workingDirectory: "packages/backend"
         env:
           FRONTEND_URL_SUFFIX: ${{ secrets.FRONTEND_URL_SUFFIX }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
