--- a/packages/backend/wrangler.toml
+++ b/packages/backend/wrangler.toml
@@ -1,3 +1,11 @@
 name = "mys2"
 main = "src/index.ts"
 compatibility_date = "2024-11-16"
+
+[[durable_objects.bindings]]
+name = "RATE_LIMITER"
+class_name = "RateLimiter"
+
+[[migrations]]
+tag = "v1"
+new_sqlite_classes = ["RateLimiter"]
