--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-query-persist-client": "^5.80.6",
     "@tanstack/react-router": "^1.120.16",
+    "axios": "^1.9.0",
     "backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,7 +39,6 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.57.0",
     "recharts": "^2.15.3",
-    "redaxios": "^0.5.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
