--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,60 +10,61 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@marsidev/react-turnstile": "^1.1.0",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.49.10",
-    "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
-    "@tanstack/react-query-persist-client": "^5.80.6",
-    "@tanstack/react-router": "^1.120.16",
-    "axios": "^1.9.0",
+    "@marsidev/react-turnstile": "^1.3.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.79.0",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-query-persist-client": "^5.90.8",
+    "@tanstack/react-router": "^1.134.12",
+    "axios": "^1.13.2",
     "backend": "workspace:*",
+    "caniuse-lite": "^1.0.30001753",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.19",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.461.0",
     "matter-js": "^0.20.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.57.0",
-    "recharts": "^2.15.3",
+    "react-hook-form": "^7.66.0",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.4",
-    "zod": "^3.25.52"
+    "use-debounce": "^10.0.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@tanstack/eslint-plugin-query": "^5.78.0",
-    "@tanstack/router-devtools": "^1.120.16",
-    "@tanstack/router-plugin": "^1.120.16",
+    "@eslint/js": "^9.39.1",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@tanstack/router-devtools": "^1.134.12",
+    "@tanstack/router-plugin": "^1.134.12",
     "@types/matter-js": "^0.19.8",
-    "@types/node": "^22.15.30",
-    "@types/react": "^18.3.23",
+    "@types/node": "^22.19.0",
+    "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.10.1",
+    "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.28.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^15.15.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.33.1",
-    "vite": "^5.4.19"
+    "typescript-eslint": "^8.46.3",
+    "vite": "^7.1.12"
   }
 }
